add DIP principle

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,7 +6,7 @@
 @import './components/excel/toolbar';
 @import './components/excel/table';
 @import './components/dashboard/index';
-
+@import './components/loader';
 * {
   margin: 0;
   padding: 0;
